small fixes: delete roles was not working, added applications name to console section title, removed old collapsability of console section

--- a/portal/css/usergrid.less
+++ b/portal/css/usergrid.less
@@ -35,6 +35,10 @@ html{
     cursor: pointer;
   }
 
+  .app_title {
+    padding-right: 20px;
+  }
+
   .bar a {
     padding-left: 10px !important;
     float: right;
@@ -380,11 +384,6 @@ a:active {
 	}
 }
 
-.openPanel, .closePanel{
-    display:inline-block;
-    width: 25px;
-    //float: left;
-}
 //---------------- Panels ---------------------------------------------------------------------
 
 #application-panel{
